Add random color generator

--- a/195.css
+++ b/195.css
@@ -15,3 +15,9 @@ body {
   margin: 0 auto;
   max-width: 600px;
 }
+
+#navbar {
+  background-color: white;
+  height: 30px;
+  text-align: center;
+}
