--- a/195.css
+++ b/195.css
@@ -1,6 +1,7 @@
 body {
   background-color: grey;
   margin: 0;
+  font-family: "Montserrat";
 }
 
 .square {
@@ -10,10 +11,11 @@ body {
   background: purple;
   padding-bottom: 30%;
   float: left;
+  transition: background 0.5s;
 }
 
 #container {
-  margin: 0 auto;
+  margin: 20px auto;
   max-width: 600px;
 }
 
@@ -24,12 +26,41 @@ body {
 }
 
 .selected {
-  background: blue;
+  background: steelblue;
+  color: white;
 }
 
 h1 {
   text-align: center;
+  text-transform: uppercase;
+  font-weight: normal;
+  color: white;
   background: steelblue;
   margin: 0;
-  height: 100px;
+  padding: 20px 0;
+}
+
+#colorDisplay {
+  font-size: 200%;
+}
+
+button {
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  height: 100%;
+  font-weight: 700;
+  letter-spacing: 2px;
+  font-size: inherit;
+  transition: all 0.5s;
+}
+
+button:hover {
+  background: steelblue;
+  color: white;
+}
+
+#correct {
+  display: inline-block;
+  width: 20%;
 }
