--- a/308/views/index.ejs
+++ b/308/views/index.ejs
@@ -1,3 +1,6 @@
+<% include ./partials/header %>
+
+
 <h1>Index Page!</h1>
 
 <% blogs.forEach(function(blog){ %>
@@ -8,3 +11,7 @@
     <p><%= blog.body%></p>
   </div>
 <% }) %>
+
+
+
+<% include ./partials/footer %>
