--- a/Museum of Candy/app.css
+++ b/Museum of Candy/app.css
@@ -19,3 +19,17 @@ body {
     font-size: 1.5rem;
     font-weight: 100;
 }
+
+#headingGroup span {
+    color: #ea1c2c;
+}
+
+#headingGroup h1 {
+    font-size: 3rem;
+}
+
+@media (max-width: 1200px) {
+    #headingGroup h1 {
+        font-size: 2.5rem;
+    }
+}
