--- a/Museum of Candy/app.css
+++ b/Museum of Candy/app.css
@@ -28,6 +28,14 @@ body {
     font-size: 3rem;
 }
 
+.secondText {
+    color: #ea1c2c;
+}
+
+.lead {
+    line-height: 2;
+}
+
 @media (max-width: 1200px) {
     #headingGroup h1 {
         font-size: 2.5rem;
