--- a/Museum of Candy/app.css
+++ b/Museum of Candy/app.css
@@ -36,6 +36,11 @@ body {
     line-height: 2;
 }
 
+.navbar.scrolled {
+    background: rgb(222, 192, 222);
+    transition: background 700ms;
+}
+
 @media (max-width: 1200px) {
     #headingGroup h1 {
         font-size: 2.5rem;
